<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:clipToPadding="false"
    android:padding="@dimen/dp_12"
    tools:context="customview.CustomViewActivity">

    <Button
        android:id="@+id/mainActivityBtnCircle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/circle"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainActivityBtnLine"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnCircle" />

    <Button
        android:id="@+id/mainActivityBtnRect"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/rect"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnLine" />

    <Button
        android:id="@+id/mainActivityBtnPoint"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnRect" />

    <Button
        android:id="@+id/mainActivityBtnOval"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/oval"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnPoint" />

    <Button
        android:id="@+id/mainActivityBtnText"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnOval" />

    <Button
        android:id="@+id/mainActivityBtnArc"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/arc"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnText" />

    <Button
        android:id="@+id/mainActivityBtnPath"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityBtnArc" />
</androidx.constraintlayout.widget.ConstraintLayout>